--- a/app/components/nav/Nav.scss
+++ b/app/components/nav/Nav.scss
@@ -1,16 +1,18 @@
+@import '../../styles/_variables.scss';
 @import '../../styles/_material-colors-get.scss';
 
 .navigation {
-	padding: 0 24px;
-	background-color: material-color('grey', '900');
+	padding: ($gutter * 3) ($gutter * 2) ($gutter * 4);
+	@include linear-gradient(darken(material-color($primary, '800'), 5%), material-color($primary, '900'));
 	.navigation-link {
-		color: material-color('yellow', '700');
+		color: $text-primary;
 		display: inline-block;
-		padding: 18px 12px;
+		padding: $l-gutter $gutter;
+		margin-right: ($gutter * 2);
 		font-weight: 300;
 		border-bottom: 3px solid transparent;
-		&:hover {
-			border-bottom-color: material-color('red', '800');
+		&:hover, &--active {
+			border-bottom-color: material-color($secondary, '500');
 		}
 	}
 }
