--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -7,6 +7,7 @@
 @import '../components/Section/Section.scss';
 @import '../components/Card/Card.scss';
 @import '../components/List/List.scss';
+@import '../components/Form/index.scss';
 
 *, ::after, ::before {
 	box-sizing: border-box;
