--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -2,7 +2,8 @@ $gutter: 12px;
 $s-gutter: 8px;
 $l-gutter: 16px;
 
-$primary: 'grey';
+$background: 'grey';
+$primary: 'blue';
 $secondary: 'red';
 
 $text-primary: #555;
