--- a/app/components/Form/Input.scss
+++ b/app/components/Form/Input.scss
@@ -9,7 +9,7 @@
 			top: $s-gutter;
 			left: ($s-gutter / 2);
 			font-size: 16px;
-			font-weight: 300;
+			font-weight: 400;
 			transition: all .15s;
 		}
 
@@ -20,6 +20,14 @@
 			font-size: 16px;
 			position: relative;
 			width: 100%;
+
+			&.input--has-value {
+				& + .input-label {
+					top: -($s-gutter * 1.5);
+					left: 0;
+					transform: scale(.75);
+				}
+			}
 
 			&:focus {
 				outline: 0;
