--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -11,12 +11,18 @@ $text-secondary: #FFF;
 
 $common-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
 
-@mixin linear-gradient($from, $to) {
-  background: $to;
-	background: -moz-linear-gradient(top, $from 0%, $to 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,$from), color-stop(100%,$to));
-	background: -webkit-linear-gradient(top, $from 0%,$to 100%);
-	background: -o-linear-gradient(top, $from 0%,$to 100%);
-	background: linear-gradient(to bottom, $from 0%,$to 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#{$from}, endColorstr=#{$to})
+@mixin selectableFieldBase() {
+  position: relative;
+	display: inline-block;
+	padding: $gutter 0;
+	cursor: pointer;
+	margin-right: $gutter;
+}
+
+@mixin selectableFieldLabel() {
+	font-size: 16px;
+	font-weight: 400;
+	transition: all .15s;
+	cursor: pointer;
+	position: relative;
 }
