adding table component, still have to work on Selectable table, also removed section and created container

--- a/app/components/Button/Button.scss
+++ b/app/components/Button/Button.scss
@@ -36,6 +36,10 @@
 				color: material-color($secondary, '500');
 				border-color: material-color($secondary, '500');
 			}
+
+			&:focus {
+				outline: 0;
+			}
 		}
 
 		&--raised {
