--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -5,9 +5,9 @@
 
 @import '../components/Nav/Nav.scss';
 @import '../components/Button/Button.scss';
-@import '../components/Section/Section.scss';
 @import '../components/Card/Card.scss';
 @import '../components/List/List.scss';
+@import '../components/Table/Table.scss';
 @import '../components/Layout/index.scss';
 @import '../components/Form/index.scss';
 
