--- a/app/components/List/List.scss
+++ b/app/components/List/List.scss
@@ -7,6 +7,7 @@
 	box-shadow: $common-shadow;
 	transition: all .2s;
 	padding: 0;
+	margin: 0;
 	font-weight: 200;
 	list-style: none;
 	&.list--selectable {
