adding table component, and some scss for layout and forms

--- a/app/components/Form/Input.scss
+++ b/app/components/Form/Input.scss
@@ -3,6 +3,12 @@
 
 .input {
 	position: relative;
+	padding: $gutter 0;
+
+	&-inner {
+		position: relative;
+	}
+
 	&:hover {
 		.input-border:before {
 			transition: all .25s;
