--- a/app/components/Layout/index.scss
+++ b/app/components/Layout/index.scss
@@ -5,6 +5,10 @@
 	display: flex;
 
 	&.layout {
+		&--stretch > * {
+			flex-grow: 1;
+		}
+
 		&--row {
 			flex-direction: row;
 		}
@@ -56,7 +60,6 @@
 		&--align-stretch {
 			align-items: stretch;
 		}
-
 	}
 }
 
@@ -68,5 +71,11 @@
 		&--liquid {
 			max-width: 100%;
 		}
+	}
+}
+
+@media all and (max-width: 1024px) {
+	.container {
+		padding: $s-gutter;
 	}
 }
