--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -7,6 +7,7 @@
 @import '../components/Button/Button.scss';
 @import '../components/Card/Card.scss';
 @import '../components/List/List.scss';
+@import '../components/Loading/Loading.scss';
 @import '../components/Table/Table.scss';
 @import '../components/Layout/index.scss';
 @import '../components/Form/index.scss';
