--- a/app/components/Button/Button.scss
+++ b/app/components/Button/Button.scss
@@ -9,36 +9,87 @@
 	border: 0;
 	border-radius: 3px;
 	font-weight: 500;
+	position: relative;
+	overflow: hidden;
+	transition: all .1s;
+	&:focus {
+		outline: 0;
+	}
+	
+	&:active {
+		&:hover {
+			.button--ripple {
+				&:before {
+					width: 100%;
+					height: 100%;
+					top: 0;
+					left: 0;
+					border-radius: 0;
+				}
+			}
+		}
+	}
+
+	.button--ripple {
+		position: absolute;
+		overflow: hidden;
+		top: -150%;
+		right: 0;
+		bottom: -150%;
+		left: 0;
+		&:before {
+			position: absolute;
+			content: '';
+			width: 0;
+			left: 50%;
+			top: 50%;
+			height: 0;
+			border-radius: 100%;
+			transition: all .3s;
+			background-color: $rippleBackground;
+		}
+	}
+
 	&.button {
 		&--primary {
 			background-color: material-color($primary, '500');
-			border: 2px solid material-color($primary, '500');
+			border: 1px solid material-color($primary, '500');
 			color: $text-secondary;
+
+			&:hover {
+				background-color: darken(material-color($primary, '500'), 7.5%);
+			}
 		}
 
 		&--secondary {
 			background-color: material-color($secondary, '500');
-			border: 2px solid material-color($secondary, '500');
+			border: 1px solid material-color($secondary, '500');
 			color: $text-secondary;
+
+			&:hover {
+				background-color: darken(material-color($secondary, '500'), 7.5%);
+			}
 		}
 
 		&--outline {
 			background-color: transparent;
-			border-width: 2px;
+			border-width: 1px;
 			border-style: solid;
 			box-shadow: none;
 			&.button--primary {
 				color: material-color($primary, '500');
 				border-color: material-color($primary, '500');
+				&:hover {
+					background-color: $rippleBackground;
+				}
 			}
 
 			&.button--secondary {
 				color: material-color($secondary, '500');
 				border-color: material-color($secondary, '500');
-			}
-
-			&:focus {
-				outline: 0;
+				&:hover {
+					background-color: $rippleBackground;
+				}
 			}
 		}
 
@@ -58,10 +109,16 @@
 			box-shadow: none;
 			&.button--primary {
 				color: material-color($primary, '500');
+				&:hover {
+					background-color: $rippleBackground;
+				}
 			}
 
 			&.button--secondary {
 				color: material-color($secondary, '500');
+				&:hover {
+					background-color: $rippleBackground;
+				}
 			}
 		}
 	}
