ripple effect as animation

--- a/app/components/Button/Button.scss
+++ b/app/components/Button/Button.scss
@@ -17,15 +17,9 @@
 	}
 	
 	&:active {
-		&:hover {
-			.button--ripple {
-				&:before {
-					width: 100%;
-					height: 100%;
-					top: 0;
-					left: 0;
-					border-radius: 0;
-				}
+		.button--ripple {
+			&:before {
+				animation: ripple .5s ease-out;
 			}
 		}
 	}
@@ -121,5 +115,27 @@
 				}
 			}
 		}
+	}
+}
+
+@keyframes ripple {
+	65% {
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		border-radius: 0;
+		opacity: 1;
+	}
+
+	90% {
+		width: 200%;
+		height: 200%;
+		top: -50%;
+		left: -50%;
+	}
+
+	100% {
+		opacity: 0;
 	}
 }
