--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -12,7 +12,8 @@ $text-secondary: #FFF;
 $common-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
 
 $rippleBackground: rgba(0, 0, 0, 0.05);
-$lightRippleBackground: rgba(255, 255, 255, 0.15);
+$darkerRippleBackground: rgba(0, 0, 0, 0.1);
+$lightRippleBackground: rgba(255, 255, 255, 0.1);
 
 @mixin selectableFieldBase() {
   position: relative;
